edge cases resolved