@@ -4,6 +4,7 @@ import com.github.cishiv.dominoes.types.board.Stock;
 import com.github.cishiv.dominoes.types.board.Tile;
 
 import java.util.LinkedList;
+import java.util.List;
 import java.util.Optional;
 
 public class Game {
@@ -16,12 +17,19 @@ public class Game {
     private Stock stock;
     private boolean ongoing;
 
+    /** For testing purposes
+     *  Provides a slice of game-state at the end of a run, which lets us verify everything hangs together through a unit test.
+     *  Values on the ticker are appended in the exact order they are played in the line of play.
+     */
+    private String ticker;
+
     public Game(String playerAName, String playerBName) {
         this.playerA = new Player(playerAName);
         this.playerB = new Player(playerBName);
         this.inPlay = new LinkedList<>();
         this.stock = new Stock();
         this.ongoing = false;
+        this.ticker = new String();
     }
 
     public void addToPlay(Tile addition) {
@@ -33,10 +41,10 @@ public class Game {
         setup();
         while (ongoing) {
             Optional<Move> playerAMove = playerA.play(inPlay.getFirst(), inPlay.getLast(), stock);
-            if(playerAMove.isPresent()) {
+            if (playerAMove.isPresent()) {
                 applyMove(playerAMove.get());
                 System.out.printf("%s\n", formattedBoardOutput());
-                if(playerAMove.get().isHandEmpty()) {
+                if (playerAMove.get().isHandEmpty()) {
                     System.out.printf("Player %s has won!", playerA.getPlayerName());
                     break;
                 }
@@ -47,10 +55,10 @@ public class Game {
             }
 
             Optional<Move> playerBMove = playerB.play(inPlay.getFirst(), inPlay.getLast(), stock);
-            if(playerBMove.isPresent()) {
+            if (playerBMove.isPresent()) {
                 applyMove(playerBMove.get());
                 System.out.printf("%s\n", formattedBoardOutput());
-                if(playerBMove.get().isHandEmpty()) {
+                if (playerBMove.get().isHandEmpty()) {
                     System.out.printf("Player %s has won!", playerB.getPlayerName());
                     break;
                 }
@@ -63,49 +71,60 @@ public class Game {
         }
     }
 
+    /** simplification for unit testing **/
+    public String ticker() {
+        return ticker.toString();
+    }
+
     private void applyMove(Move playerMove) {
         int boardIndex = inPlay.indexOf(playerMove.getBoardTile());
         switch (playerMove.getParity()) {
             case RR -> {
-                playerMove.getPlayerTile().invert();
-                playerMove.getPlayerTile().toggleLeft();
+                playerMove.getPlayerTile().toggleRight();
                 inPlay.get(boardIndex).toggleRight();
+                placeRightCorrectly(playerMove);
                 break;
             }
             case RL -> {
                 playerMove.getPlayerTile().toggleRight();
                 inPlay.get(boardIndex).toggleLeft();
+                placeRightCorrectly(playerMove);
                 break;
             }
             case LL -> {
-                playerMove.getPlayerTile().invert();
-                playerMove.getPlayerTile().toggleRight();
+                playerMove.getPlayerTile().toggleLeft();
                 inPlay.get(boardIndex).toggleLeft();
+                placeLeftCorrectly(playerMove);
                 break;
             }
             case LR -> {
                 playerMove.getPlayerTile().toggleLeft();
                 inPlay.get(boardIndex).toggleRight();
+                placeLeftCorrectly(playerMove);
                 break;
             }
         }
-        placeCorrectly(playerMove);
     }
 
-    private void placeCorrectly(Move playerMove) {
-        // the edge case for pretty-printed, the first tile doesn't self identify as 'last' even though it might logically be right aligned
-        if(inPlay.size() == 1) {
-            if(inPlay.get(0).getR() == playerMove.getPlayerTile().getR() || inPlay.get(0).getR() == playerMove.getPlayerTile().getL()) {
-                inPlay.addLast(playerMove.getPlayerTile());
-            } else {
-                inPlay.addFirst(playerMove.getPlayerTile());
-            }
+    private void placeLeftCorrectly(Move playerMove) {
+        if (inPlay.getFirst().equals(playerMove.getBoardTile())) {
+            playerMove.getPlayerTile().inverseOrientation();
+            inPlay.addFirst(playerMove.getPlayerTile());
+            ticker = playerMove.getPlayerTile().toString().replaceAll("[^0-9.]", "") + ticker;
         } else {
-            if(inPlay.getFirst().equals(playerMove.getBoardTile())) {
-                inPlay.addFirst(playerMove.getPlayerTile());
-            } else {
-                inPlay.addLast(playerMove.getPlayerTile());
-            }
+            inPlay.addLast(playerMove.getPlayerTile());
+            ticker = ticker + playerMove.getPlayerTile().toString().replaceAll("[^0-9.]", "");
+        }
+    }
+
+    private void placeRightCorrectly(Move playerMove) {
+        if (inPlay.getFirst().equals(playerMove.getBoardTile())) {
+            inPlay.addFirst(playerMove.getPlayerTile());
+            ticker = playerMove.getPlayerTile().toString().replaceAll("[^0-9.]", "") + ticker;
+        } else {
+            playerMove.getPlayerTile().inverseOrientation();
+            inPlay.addLast(playerMove.getPlayerTile());
+            ticker = ticker + playerMove.getPlayerTile().toString().replaceAll("[^0-9.]", "");
         }
     }
 
@@ -114,6 +133,7 @@ public class Game {
         playerA.draw(stock, INITIAL_HAND_SIZE);
         playerB.draw(stock, INITIAL_HAND_SIZE);
         Tile first = stock.pop(1).get(0);
+        ticker = first.toString().replaceAll("[^0-9.]", "");
         System.out.printf("Game starting with first tile: %s\n", first.toString());
         addToPlay(first);
     }
@@ -124,11 +144,5 @@ public class Game {
             builder.append(tile.toString() + "\s");
         });
         return builder.toString();
-    }
-
-    /** visible for testing
-     * @return**/
-    public LinkedList<Tile> getBoard() {
-        return inPlay;
     }
 }
